RadTestsandboxdev/src/objects/Lead.object
<CustomObject>
	<fields>
		<fullName>CurrentGenerators__c</fullName>
		<label>Current Generator(s)</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>NumberofLocations__c</fullName>
		<label>Number of Locations</label>
		<precision>3</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Primary__c</fullName>
		<label>Primary</label>
		<picklist>
			<picklistValues>
				<fullName>No</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yes</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>ProductInterest__c</fullName>
		<label>Product Interest</label>
		<picklist>
			<picklistValues>
				<fullName>GC1000 series</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>GC5000 series</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>GC3000 series</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>SICCode__c</fullName>
		<label>SIC Code</label>
		<length>15</length>
		<type>Text</type>
	</fields>
	<listViews>
		<fullName>AllOpenLeads</fullName>
		<filterScope>Everything</filterScope>
		<filters>
			<field>LEAD.STATUS</field>
			<operation>notContain</operation>
			<value>closed</value>
		</filters>
		<label>All Open Leads</label>
	</listViews>
	<listViews>
		<fullName>MyUnreadLeads</fullName>
		<filterScope>Mine</filterScope>
		<filters>
			<field>LEAD.UNREAD</field>
			<operation>equals</operation>
			<value>1</value>
		</filters>
		<label>My Unread Leads</label>
	</listViews>
	<listViews>
		<fullName>TodaysLeads</fullName>
		<filterScope>Everything</filterScope>
		<filters>
			<field>LEAD.CREATED_DATE</field>
			<operation>equals</operation>
			<value>TODAY</value>
		</filters>
		<label>Today&apos;s Leads</label>
	</listViews>
	<listViews>
		<fullName>ViewCustom1</fullName>
		<columns>FULL_NAME</columns>
		<columns>LEAD.COMPANY</columns>
		<columns>LEAD.STATE</columns>
		<columns>LEAD.EMAIL</columns>
		<columns>LEAD.STATUS</columns>
		<columns>LEAD.CREATED_DATE</columns>
		<columns>CORE.USERS.ALIAS</columns>
		<columns>LEAD.UNREAD</columns>
		<filterScope>Everything</filterScope>
		<label>View - Custom 1</label>
	</listViews>
	<listViews>
		<fullName>ViewCustom2</fullName>
		<columns>FULL_NAME</columns>
		<columns>LEAD.COMPANY</columns>
		<columns>LEAD.STATE</columns>
		<columns>LEAD.EMAIL</columns>
		<columns>LEAD.STATUS</columns>
		<columns>LEAD.CREATED_DATE</columns>
		<columns>CORE.USERS.ALIAS</columns>
		<columns>LEAD.UNREAD</columns>
		<columns>LEAD.LEAD_SOURCE</columns>
		<filterScope>Everything</filterScope>
		<label>View - Custom 2</label>
	</listViews>
	<sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>